environments/staging/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: staging
  labels:
    app: api-gateway
    app.kubernetes.io/part-of: company-platform

spec:
  type: ClusterIP

  selector:
    app: api-gateway

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
